--- a/qjgl/qjgl_YG.html
+++ b/qjgl/qjgl_YG.html
@@ -7,10 +7,19 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>请假申请单(员工)</title>
     <!--<link rel="stylesheet" href="index.css">-->
-    <script type="text/javascript" src="js/jquery.js"></script>
+    <script src="js/jquery.js" type="text/javascript"></script>
+    <script src="js/jquery-1.10.0.min.js"></script>
+    <script src="js/mobiscroll_002.js" type="text/javascript"></script>
+    <script src="js/mobiscroll_004.js" type="text/javascript"></script>
+    <link href="css/mobiscroll_002.css" rel="stylesheet" type="text/css">
+    <link href="css/mobiscroll.css" rel="stylesheet" type="text/css">
+    <script src="js/mobiscroll.js" type="text/javascript"></script>
+    <script src="js/mobiscroll_003.js" type="text/javascript"></script>
+    <script src="js/mobiscroll_005.js" type="text/javascript"></script>
+    <link href="css/mobiscroll_003.css" rel="stylesheet" type="text/css">
     <script>
         var width = document.documentElement.clientWidth || document.body.clientWidth;
-        document.getElementsByTagName("html")[0].style.fontSize = width / 750 * 100 + "px";
+        document.getElementsByTagName("html")[0].style.fontSize = width / 750 * 100 + "px";        
     </script>
     <style>
         * {
@@ -104,19 +113,19 @@
             <li>
                 <div class="line">
                     <span class="text">申请日期</span>
-                    <input type="date" name="fldsqrq" id="fldsqrq"/>
+                    <input id="fldsqrq" runat="server"  readonly="readonly"/>
                 </div>
             </li>
             <li>
                 <div class="line">
                     <span class="text">请假时间(始)</span>
-                    <input type="date" name="fldqjsj_start" id="fldqjsj_start"/>
+                    <input id="fldqjsj_start" runat="server"  readonly="readonly"/>
                 </div>
             </li>
             <li>
                 <div class="line">
                     <span class="text">请假时间(终)</span>
-                    <input type="date" name="fldqjsj_end" id="fldqjsj_end"/>
+                    <input id="fldqjsj_end" runat="server"  readonly="readonly"/>
                 </div>
             </li>
             <li>
@@ -157,7 +166,29 @@
 </div>
 <script type="text/javascript">
     $(function(){
-
+        //时间控件-------start
+        var currYear = (new Date()).getFullYear();  
+        var opt={};
+        opt.date = {preset : 'date'};
+        opt.datetime = {preset : 'datetime'};
+        opt.time = {preset : 'time'};
+        opt.default = {
+            theme: 'android-ics light', //皮肤样式
+            display: 'modal', //显示方式 
+            mode: 'scroller', //日期选择模式
+            dateFormat: 'yyyy-mm-dd',
+            lang: 'zh',
+            showNow: true,
+            nowText: "今天",
+            startYear: currYear - 10, //开始年份
+            endYear: currYear + 80 //结束年份
+        };
+        $("#fldsqrq").mobiscroll($.extend(opt['date'], opt['default']));
+        var optDateTime = $.extend(opt['datetime'], opt['default']);
+        $("#fldqjsj_start").mobiscroll(optDateTime).datetime(optDateTime);
+        $("#fldqjsj_end").mobiscroll(optDateTime).datetime(optDateTime);
+        //时间控件-------end
+        
     });
 </script>
 </body>
